--- a/spring-boot-project/pom.xml
+++ b/spring-boot-project/pom.xml
@@ -68,6 +68,13 @@
             <scope>test</scope>
         </dependency>
 
+
+        <!-- redis依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
