--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -12,5 +12,14 @@
     <groupId>com.java.project</groupId>
     <artifactId>java-project</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
