--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>java-project</module>
         <module>spring-boot-project</module>
         <module>spring-boot-dubbo</module>
+        <module>biz-tool</module>
     </modules>
 
 
