--- a/spring-boot-project/src/main/resources/application.yml
+++ b/spring-boot-project/src/main/resources/application.yml
@@ -8,34 +8,39 @@ server:
 spring:
     profiles:
         active: dev
-#    datasource:
-#        username: root
-#        password: 19941029lz09
-#        url: jdbc:mysql://124.221.168.242:3306/test
-#        driver-class-name: com.mysql.jdbc.Driver
+    datasource:
+        username: root
+        password: 19941029lz09
+        url: jdbc:mysql://124.221.168.242:3306/test
+        driver-class-name: com.mysql.jdbc.Driver
 #
 #    redis:
 #        url: redis//124.221.168.242:6379
-#
-#
-#mybatis:
-#    mapper-locations: classpath:mapper/*Mapper.xml
-#    type-aliases-package: com.example
 
+
+mybatis:
+    mapper-locations: classpath:mapper/*Mapper.xml
+    type-aliases-package: com.example
+
+
+logging:
+    config: classpath:log/log4j2.xml
+    level:
+        cn.jay.repository: trace
 
 
 
 
 
 #Apollo 配置
-app:
-    id: myProjectDubbo
-apollo:
-#    cacheDir: /opt/data/                       #配置本地配置缓存目录
-#    cluster: default                           #指定使用哪个集群的配置
-    meta: http://124.221.168.242:8080
-#    autoUpdateInjectedSpringProperties: true   #是否开启 Spring 参数自动更新
-    bootstrap:
-        enabled: true
-        eagerLoad:
-            enabled: false
+#app:
+#    id: myProjectDubbo
+#apollo:
+##    cacheDir: /opt/data/                       #配置本地配置缓存目录
+##    cluster: default                           #指定使用哪个集群的配置
+#    meta: http://apollo.linzhou.link
+##    autoUpdateInjectedSpringProperties: true   #是否开启 Spring 参数自动更新
+#    bootstrap:
+#        enabled: true
+#        eagerLoad:
+#            enabled: false
