--- a/spring-boot-dubbo/spring-boot-dubbo-customer/src/main/resources/application.yml
+++ b/spring-boot-dubbo/spring-boot-dubbo-customer/src/main/resources/application.yml
@@ -12,3 +12,5 @@ spring:
       name: dubbo
       port: 20891 #dubbo???????
     scan: com.example #?????
+    consumer:
+      filter: dubboLogFilter
