--- a/spring-boot-dubbo/spring-boot-dubbp-biz/src/main/resources/application.yml
+++ b/spring-boot-dubbo/spring-boot-dubbp-biz/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
       name: dubbo
       port: 20890 #dubbo???????
     scan: com.example.springbootdubbpbiz.remoteapi.impl #?????
+
+
+    provider:
+      filter: dubboLogFilter
