--- a/spring-boot-project/pom.xml
+++ b/spring-boot-project/pom.xml
@@ -70,10 +70,10 @@
 
 
         <!-- redis依赖-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-redis</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
 
 <!--        <dependency>-->
