--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -19,7 +19,12 @@
             <artifactId>guava</artifactId>
             <version>31.1-jre</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.3</version>
+        </dependency>
     </dependencies>
 
 </project>
