--- a/spring-boot-dubbo/spring-boot-dubbo-api/pom.xml
+++ b/spring-boot-dubbo/spring-boot-dubbo-api/pom.xml
@@ -35,11 +35,11 @@
             <version>1.0.0</version>
         </dependency>
         <!-- zookeeper客户端 -->
-        <dependency>
-            <groupId>com.101tec</groupId>
-            <artifactId>zkclient</artifactId>
-            <version>0.7</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.101tec</groupId>-->
+<!--            <artifactId>zkclient</artifactId>-->
+<!--            <version>0.7</version>-->
+<!--        </dependency>-->
 
         <!-- pom.xml添加log4j依赖,最新版本可以去maven网站下载 -->
         <dependency>
