--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -11,6 +11,18 @@
 
     <groupId>com.java.project</groupId>
     <artifactId>java-project</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
