--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>biz-tool</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
